@@ -1,1 +1,1 @@
-1.1.0-beta2
+1.1.0-beta3
